--- a/index.html
+++ b/index.html
@@ -25,23 +25,8 @@
         <p>X</p>
       </div>
       <div class="sprite--window">
-        <aside class="sprite--color-picker">   
-            <div class="sprite--color-swatch"data-color="fafafa" style="background-color: #fafafa;"></div>
-            <div class="sprite--color-swatch"data-color="d4d4d4" style="background-color: #d4d4d4;"></div>
-            <div class="sprite--color-swatch"data-color="9d9d9d" style="background-color: #9d9d9d;"></div>
-            <div class="sprite--color-swatch"data-color="4b4b4b" style="background-color: #4b4b4b;"></div>
-            <div class="sprite--color-swatch"data-color="f9d381" style="background-color: #f9d381;"></div>
-            <div class="sprite--color-swatch"data-color="eaaf4d" style="background-color: #eaaf4d;"></div>
-            <div class="sprite--color-swatch"data-color="f9938a" style="background-color: #f9938a;"></div>
-            <div class="sprite--color-swatch"data-color="e75952" style="background-color: #e75952;"></div>
-            <div class="sprite--color-swatch"data-color="9ad1f9" style="background-color: #9ad1f9;"></div>
-            <div class="sprite--color-swatch"data-color="58aeee" style="background-color: #58aeee;"></div>
-            <div class="sprite--color-swatch"data-color="58aeee" style="background-color: #58aeee;"></div>
-            <div class="sprite--color-swatch"data-color="44c55b" style="background-color: #44c55b;"></div>
-            <div class="sprite--color-swatch"data-color="c3a7e1" style="background-color: #c3a7e1;"></div>
-            <div class="sprite--color-swatch"data-color="9569c8" style="background-color: #9569c8;"></div>
-            <div class="sprite--color-swatch"data-color="bab5aa" style="background-color: #bab5aa;"></div>
-            <div class="sprite--color-swatch"data-color="948e82" style="background-color: #948e82;"></div>          
+        <aside class="sprite--palette">   
+                  
         </aside>
         <canvas id='editor' class="sprite--canvas" width="640" height="640"></canvas>
       </div>
