basic saving of images

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           <div class="sprite--editor-controls">
             <select id="pxWidth" name="Sprite Width">
               <option value="16">16x16</option>
-              <option value="32">32x32</option>
+              <option value="32" selected>32x32</option>
               <option value="64">64x64</option>
-              <option value="128">128x128</option>
+              <option value="128" >128x128</option>
             </select>
           </div>          
         </div>
